# Python-Challenge-Data-Scientist

./: .gitignore  README.md
01_Bases_Python/: Introduction.ipynb  README.md
Machine_Learning/01_Analyse_graphique/: Analyse_Multivarie.ipynb  Analyse_Univarie.ipynb  Ex0_MilePerGallon.ipynb  Exo_Anscombe.ipynb  Exo_Heath_Expectancy.ipynb  Multivariate_Analysis.ipynb  Univariate_Analysis.ipynb
Machine_Learning/02_Test Hypotheses/: Test1_Health_Expectancy.ipynb  Test2_MPG.ipynb
Machine_Learning/03_Analyse_Fondamentale/: Glue.ipynb
Machine_Learning/04_PreProcessing/: Exercice.ipynb  Exo_Pipeline.ipynb  Preproces_Sequence.ipynb  Transformer.ipynb
Machine_Learning/04_PreProcessing/FeatureEngineering/: Exercice.ipynb
Machine_Learning/04_PreProcessing/Feature_Select/: Exercice.ipynb
Machine_Learning/04_PreProcessing/NaNs/: Exercice.ipynb
Machine_Learning/04_PreProcessing/Normalisation/: Exercice.ipynb
Machine_Learning/04_PreProcessing/Outliers/: Exercice.ipynb
Machine_Learning/05_Modelisation/: Metrique_Classification.ipynb  Metrique_regression.ipynb
Machine_Learning/06_Evaluation/: evaluation.ipynb
Projet/Churn_Bank/: README.md  churn_bank.ipynb  pyproject.toml
Projet/Prix_Immobilier/: PrixImmobilier.ipynb  pyproject.toml
Projet/Voyageur_de_commerce/: README.md  Voyageur_de_commerce.ipynb  villes.txt
Python/: README.md
Python/Programme-d-entrainement-Python/: README.md
Python/Programme-d-entrainement-Python/01 Cours débutant/: 01_Introduction.ipynb  02_Variables et types de donnees.ipynb  03_Operations et expressions.ipynb  06_Les boucles.ipynb  (+12 more)
(+51 files in other folders)
